ImplementedDTOs and Jackson
